--- a/furniture-storing/Base.lproj/Main.storyboard
+++ b/furniture-storing/Base.lproj/Main.storyboard
@@ -46,7 +46,6 @@
                     </view>
                     <navigationItem key="navigationItem" id="6Di-K5-6b1"/>
                     <connections>
-                        <outlet property="emptyLabelText" destination="zfy-Y5-tuL" id="Rw7-oG-hku"/>
                         <outlet property="emptyTextLabel" destination="zfy-Y5-tuL" id="r4t-yP-m1q"/>
                         <outlet property="tableView" destination="CMZ-St-tm0" id="h0C-nJ-hlf"/>
                         <segue destination="0QH-Wd-y3c" kind="show" identifier="AddItemSegueIdentifier" id="cUP-3A-3fL"/>
@@ -71,8 +70,8 @@
                                     <constraint firstAttribute="width" constant="100" id="ZuZ-qa-naN"/>
                                 </constraints>
                             </imageView>
-                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="equalSpacing" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="C8m-PH-EzY">
-                                <rect key="frame" x="20" y="199" width="335" height="202"/>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="equalSpacing" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="C8m-PH-EzY">
+                                <rect key="frame" x="20" y="199" width="335" height="154"/>
                                 <subviews>
                                     <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Enter Furniture Name" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="fcp-Dw-GeG" userLabel="nameTextField">
                                         <rect key="frame" x="0.0" y="0.0" width="335" height="17"/>
@@ -81,14 +80,17 @@
                                         <textInputTraits key="textInputTraits"/>
                                     </textField>
                                     <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Enter Furniture Type" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Q9Z-Oz-HfO" userLabel="typeTextField">
-                                        <rect key="frame" x="0.0" y="37" width="335" height="17"/>
+                                        <rect key="frame" x="0.0" y="27" width="335" height="17"/>
                                         <nil key="textColor"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <textInputTraits key="textInputTraits"/>
                                     </textField>
                                     <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="nC4-0g-dK3" userLabel="descriptionTextView">
-                                        <rect key="frame" x="0.0" y="74" width="335" height="128"/>
+                                        <rect key="frame" x="0.0" y="54" width="335" height="100"/>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="100" id="JV1-yZ-ESN"/>
+                                        </constraints>
                                         <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </string>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
