--- a/furniture-storing/Base.lproj/Main.storyboard
+++ b/furniture-storing/Base.lproj/Main.storyboard
@@ -70,15 +70,15 @@
                                     <action selector="addImageButtonTapped:" destination="0QH-Wd-y3c" eventType="touchUpInside" id="w4j-rz-7hl"/>
                                 </connections>
                             </button>
-                            <imageView userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="tap_icon" translatesAutoresizingMaskIntoConstraints="NO" id="Q7e-CS-mPO" userLabel="itemImageView">
-                                <rect key="frame" x="137" y="79" width="100" height="100"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Q7e-CS-mPO" userLabel="itemImageView">
+                                <rect key="frame" x="112" y="79" width="150" height="150"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="100" id="EoY-i1-Zr3"/>
-                                    <constraint firstAttribute="width" constant="100" id="ZuZ-qa-naN"/>
+                                    <constraint firstAttribute="height" constant="150" id="EoY-i1-Zr3"/>
+                                    <constraint firstAttribute="width" constant="150" id="ZuZ-qa-naN"/>
                                 </constraints>
                             </imageView>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="equalSpacing" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="C8m-PH-EzY">
-                                <rect key="frame" x="20" y="199" width="335" height="154"/>
+                                <rect key="frame" x="20" y="249" width="335" height="154"/>
                                 <subviews>
                                     <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Enter Furniture Name" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="fcp-Dw-GeG" userLabel="nameTextField">
                                         <rect key="frame" x="0.0" y="0.0" width="335" height="17"/>
@@ -149,7 +149,4 @@
             <point key="canvasLocation" x="-334.39999999999998" y="-38.680659670164921"/>
         </scene>
     </scenes>
-    <resources>
-        <image name="tap_icon" width="20" height="20"/>
-    </resources>
 </document>
