--- a/furniture-storing/Base.lproj/Main.storyboard
+++ b/furniture-storing/Base.lproj/Main.storyboard
@@ -9,6 +9,11 @@
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
+    <customFonts key="customFonts">
+        <array key="HelveticaNeue.ttc">
+            <string>HelveticaNeue</string>
+        </array>
+    </customFonts>
     <scenes>
         <!--Furniture Landing View Controller-->
         <scene sceneID="tne-QT-ifu">
@@ -18,9 +23,9 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="No furniture in your inbox. Please add it from the 'Add' button." textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zfy-Y5-tuL">
-                                <rect key="frame" x="-48" y="323" width="471" height="21"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                            <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Please add furniture from the 'Add' button." textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zfy-Y5-tuL">
+                                <rect key="frame" x="54" y="325.5" width="267.5" height="16.5"/>
+                                <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="14"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
@@ -48,7 +53,6 @@
                     <connections>
                         <outlet property="emptyTextLabel" destination="zfy-Y5-tuL" id="r4t-yP-m1q"/>
                         <outlet property="tableView" destination="CMZ-St-tm0" id="h0C-nJ-hlf"/>
-                        <segue destination="0QH-Wd-y3c" kind="show" identifier="AddItemSegueIdentifier" id="cUP-3A-3fL"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
@@ -58,27 +62,27 @@
         <!--Add Item View Controller-->
         <scene sceneID="Z19-P4-hKQ">
             <objects>
-                <viewController id="0QH-Wd-y3c" customClass="AddItemViewController" customModule="furniture_storing" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="addItemViewController" id="0QH-Wd-y3c" customClass="AddItemViewController" customModule="furniture_storing" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="JMK-tL-VT5">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9mJ-b3-WZT" userLabel="addImageButton">
-                                <rect key="frame" x="108" y="114" width="158" height="30"/>
+                                <rect key="frame" x="108" y="70" width="158" height="30"/>
                                 <state key="normal" title="Tap here to add image!"/>
                                 <connections>
                                     <action selector="addImageButtonTapped:" destination="0QH-Wd-y3c" eventType="touchUpInside" id="w4j-rz-7hl"/>
                                 </connections>
                             </button>
                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Q7e-CS-mPO" userLabel="itemImageView">
-                                <rect key="frame" x="112" y="79" width="150" height="150"/>
+                                <rect key="frame" x="112" y="35" width="150" height="150"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="150" id="EoY-i1-Zr3"/>
                                     <constraint firstAttribute="width" constant="150" id="ZuZ-qa-naN"/>
                                 </constraints>
                             </imageView>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="equalSpacing" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="C8m-PH-EzY">
-                                <rect key="frame" x="20" y="249" width="335" height="154"/>
+                                <rect key="frame" x="20" y="205" width="335" height="154"/>
                                 <subviews>
                                     <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Enter Furniture Name" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="fcp-Dw-GeG" userLabel="nameTextField">
                                         <rect key="frame" x="0.0" y="0.0" width="335" height="17"/>
